--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-packing",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "",
   "homepage": "",
   "author": {
@@ -20,6 +20,7 @@
     "chalk": "^1.0.0",
     "mkdirp": "^0.5.1",
     "object-assign": "^4.1.0",
+    "packing-glob": "^1.0.1",
     "yeoman-generator": "^0.23.0",
     "yosay": "^1.0.0"
   },
