--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mkdirp": "^0.5.1",
     "object-assign": "^4.1.0",
     "packing-glob": "^1.0.1",
+    "semversion": "^1.0.1",
     "yeoman-generator": "^0.23.0",
     "yosay": "^1.0.0"
   },
