--- a/generators/app/templates/profiles/development.env
+++ b/generators/app/templates/profiles/development.env
@@ -1,4 +1,1 @@
-CDN_ROOT=//l-wap1.wap.dev.cn6.qunar.com/<%= props.name %>/dev/
-
-# portal 发布时使用下面的地址
-# CDN_ROOT=//l-qzz1.fe.dev.cn0.qunar.com/<%= props.name %>/dev/
+CDN_ROOT=//<%= props.ci === 'qdr' ? 'l-wap1.wap.dev.cn6.qunar.com' : 'l-qzz1.fe.dev.cn0.qunar.com' %>/<%= props.name %>/dev/
