--- a/generators/app/templates/tsconfig.json
+++ b/generators/app/templates/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "experimentalDecorators": true,
     "module": "commonjs",
     "esModuleInterop": true,
     "target": "es5",
@@ -8,12 +9,11 @@
     "baseUrl": "./src",
     "allowSyntheticDefaultImports": true,
     "resolveJsonModule": true,
+    "jsx": "react",
     "lib": [
       "es2017",
       "dom"
     ]
   },
-  "exclude": [
-    "node_modules"
-  ]
+  "include": ["src"]
 }
